fixing input field height (globally!); new date icon with correct size; button--icon-only keeps its size on mobile
SRFCMSAL-2860

--- a/source/_patterns/10-atoms/buttons/button.scss
+++ b/source/_patterns/10-atoms/buttons/button.scss
@@ -319,7 +319,8 @@ $button-animation-duration: .3s;
 }
 
 .button--icon-only {
-  padding: 13px;
+  width: auto;
+  padding: 12px;
 
   .button-wrapper {
     height: auto;
